@@ -2506,10 +2506,11 @@ void
 Sta::setReportPathFields(bool report_input_pin,
 			 bool report_net,
 			 bool report_cap,
-			 bool report_slew)
+			 bool report_slew,
+                         bool report_fanout)
 {
   report_path_->setReportFields(report_input_pin, report_net, report_cap,
-				report_slew);
+				report_slew, report_fanout);
 }
 
 ReportField *
